--- a/backend/public/css/site.css
+++ b/backend/public/css/site.css
@@ -8,6 +8,10 @@ body {
   transition: all 0.4s ease 0s;
 }
 
+a {
+  transition: all 0.4s ease 0s;
+}
+
 #page-content-wrapper {
   margin-top: -1px;
   width: 100%;
@@ -86,15 +90,13 @@ body.fullscreen {
   background-color: #fff;
 }
 
-a.unclicked {
+a.unseen {
   font-weight: 600 !important;
   font-style: italic;
 }
-
 a.selected-channel {
   color: #ff0000 !important;
 }
-
-.unclicked:after {
+a.selected-channel:after {
   content:" *";
 }
