--- a/backend/public/css/site.css
+++ b/backend/public/css/site.css
@@ -1,5 +1,7 @@
 body {
   background-color: #fefffe;
+  background-image:url('../images/stripe.png');
+  background-repeat: repeat;
 }
 
 #wrapper {
